(Client) Añadir iconos a todos los botones

--- a/Cliente-Angular/src/app/components/navbar/navbar.component.html
+++ b/Cliente-Angular/src/app/components/navbar/navbar.component.html
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <button *ngIf="!user.name" class="btn bgTerciario" routerLink="/auth/login">Iniciar sesión</button>
+    <button *ngIf="!user.name" class="btn bgTerciario" routerLink="/auth/login">Iniciar sesión <i class="bi bi-person-check-fill"></i></button>
 
   </div>
 </nav>
