--- a/Cliente-Angular/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row my-3">
         <div class="col d-flex justify-content-center">
-            <button class="btn bgSecundario">Recuperar cuenta</button>
+            <button class="btn bgSecundario">Recuperar cuenta <i class="bi bi-person-check-fill"></i></button>
         </div>
     </div>
     <hr>
