--- a/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.html
@@ -47,7 +47,7 @@
             <a routerLink="/auth/forgottenPassword">¿Has olvidado la contraseña?</a>
         </div>
         <div class="col-6 d-flex justify-content-end">
-            <button type="button" (click)="authUser()" class="btn bgSecundario">Iniciar sesión</button>
+            <button type="button" (click)="authUser()" class="btn bgSecundario">Iniciar sesión <i class="bi bi-person-check-fill"></i></button>
         </div>
     </div>
     <hr>
