--- a/Cliente-Angular/src/app/pages/main-module/pages/index/index.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/index/index.component.html
@@ -51,7 +51,7 @@
                     <h4>Subir producto</h4>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button routerLink="/uploadBook" class="btn bgSecundario">Subir</button>
+                    <button routerLink="/uploadBook" class="btn bgSecundario">Subir <i class="bi bi-arrow-up-circle"></i></button>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
                     <h4 class="text-center">Mis libros</h4>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button routerLink="/profile" class="btn bgSecundario">Productos</button>
+                    <button routerLink="/profile" class="btn bgSecundario">Productos <i class="bi bi-card-list"></i></button>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                     <h4>Comprar o intercambiar libros</h4>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button routerLink="/products" class="btn bgSecundario">Comprar/Cambiar</button>
+                    <button routerLink="/products" class="btn bgSecundario">Catálogo <i class="bi bi-handbag"></i></button>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
                     <h4>Crear cuenta</h4>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button routerLink="/auth/register" class="btn bgSecundario">Crear</button>
+                    <button routerLink="/auth/register" class="btn bgSecundario">Registrar <i class="bi bi-person-plus-fill"></i></button>
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
                     <h4 class="text-center">Iniciar sesión</h4>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button routerLink="/auth/login" class="btn bgSecundario">Iniciar</button>
+                    <button routerLink="/auth/login" class="btn bgSecundario">Iniciar <i class="bi bi-person-check-fill"></i></button>
                 </div>
             </div>
         </div>
