--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -44,7 +44,7 @@
                                 intercambiar el libro.</p>
                         </div>
                         <div class="col-5 d-flex align-items-center justify-content-between">
-                            <button class="btn bgTerciario" routerLink="/auth/login">Iniciar sesión</button>
+                            <button class="btn bgTerciario" routerLink="/auth/login">Iniciar sesión <i class="bi bi-person-check-fill"></i></button>
                             <button (click)="goBack()" class="btn outlineSecondary">Volver <i
                                     class="bi bi-arrow-counterclockwise"></i></button>
                         </div>
@@ -94,7 +94,7 @@
                         </div>
                         <div class="col-12 d-flex justify-content-center">
                             <button routerLink="/profile" [queryParams]="{'idUser': user.id}"
-                                class="btn bgSecundario mt-4">Visitar perfil</button>
+                                class="btn bgSecundario mt-4">Visitar perfil <i class="bi bi-person-lines-fill"></i></button>
                         </div>
                     </div>
                 </div>
