--- a/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.html
@@ -77,7 +77,7 @@
 
     <div class="row my-3">
         <div class="col d-flex justify-content-center">
-            <button (click)="authUser()" class="btn bgSecundario">Crear cuenta</button>
+            <button (click)="authUser()" class="btn bgSecundario">Crear cuenta <i class="bi bi-person-plus-fill"></i></button>
         </div>
     </div>
     <hr>
