--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -79,12 +79,12 @@
                     <p class="d-flex justify-content-end mt-3">8 productos</p>
                     <p class="d-flex justify-content-end mt-3"><span class="bold">Ubicación: &nbsp;</span> Albendín
                         (Córdoba)</p>
-                    <iframe
+                    <!-- <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d666.2203779737522!2d-4.478393117679868!3d37.4112044661761!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6d70ce974c2423%3A0x440c7613e1515361!2s14900%20Lucena%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2ses!4v1649783284300!5m2!1ses!2ses"
-                        class="map" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <!-- <google-map width="750px" height="450px" [center]="center" [zoom]="zoom">
-                    </google-map> -->
+                        class="map" allowfullscreen="true" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                    <google-map class="map" width="300px" height="200px" [center]="center" [zoom]="zoom">
+                    </google-map>
                 </div>
 
                 <div class="col-5">
