--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.scss
@@ -49,3 +49,11 @@ input {
 .noResult {
     color: rgba(99, 61, 16, 1);
 }
+
+.seeBook {
+    margin-top: -10px;
+}
+
+.user {
+    margin-top: -3px;
+}
