--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
@@ -51,6 +51,8 @@
     padding-bottom: 1rem;
     padding-left: 3rem;
     padding-right: 3rem;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .upload {
