--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -38,7 +38,7 @@
     </div>
 
     <div *ngIf="!userId; else justUploaded">
-        <div class="row mt-4">
+        <div class="row">
             <div (click)="tabSelected = 1" [class]="(tabSelected == 1) ? 'tabSelect col-4' : 'tab col-4'">
                 Mis libros subidos
             </div>
@@ -51,9 +51,9 @@
         </div>
     
         <div *ngIf="tabSelected == 1" class="row board d-flex justify-content-center">
-            <div class="col-6 col-sm-4 col-md-3" *ngFor="let book of uploadedBooksList">
+            <div class="col-6 col-sm-4 col-md-3 mt-3" *ngFor="let book of uploadedBooksList">
                 <div class="row bg-white">
-                    <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 d-flex justify-content-center mt-3">
                         <img class="thumbnail" src="data:image/jpg;base64,{{book.img}}" alt="">
                     </div>
                     <div class="col-12">
