(Client) Evitar que haya dos usuarios con el mismo correo y funcionamiento de editar perfil tras crear cuenta

--- a/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.html
@@ -44,6 +44,9 @@
                 *Escriba un email correcto
             </div>
         </div>
+        <div class="errorForm" *ngIf="existsUserEmail">
+        *Ya existe una cuenta con este correo electrónico
+        </div>
     </div>
     <div class="row my-4">
         <div class="col-4">
