(Client) Añadido el campo localidad al usuario

--- a/Cliente-Angular/src/app/pages/main-module/pages/edit-profile/edit-profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/edit-profile/edit-profile.component.html
@@ -87,6 +87,14 @@
                     <textarea formControlName="desc">{{user.description}}</textarea>
                 </div>
             </div>
+            <div class="row bgPrimario mt-3 m-1">
+                <div class="col-12 my-2">
+                    <label for="telegram">Localidad:</label>
+                </div>
+                <div class="col-12 mb-2">
+                    <input formControlName="location" type="text">
+                </div>
+            </div>
         </div>
 
         <!-- VALIDACIÓN DEL FORMULARIO -->
