--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -13,9 +13,10 @@
         </div>
         <div class="col-7">
             <h2 class="text-center my-4">{{user.name}} {{user.surnames}}</h2>
-            <p>{{user.description}}</p>
-            <p>Correo electrónico: {{user.email}}</p>
-            <p>Fecha de nacimiento: {{user.birthday}}</p>
+            <p class="mt-3">{{user.description}}</p>
+            <p class="mt-4">Correo electrónico: {{user.email}}</p>
+            <p class="mt-4">Fecha de nacimiento: {{user.birthday}}</p>
+            <p class="mt-4 mb-4">Localidad: {{user.location}}</p>
             <div class="row">
                 <div class="col-3">
                     <button *ngIf="!userId" routerLink="/editProfile" class="btn bgSecundario">Editar perfil <i class="bi bi-person-bounding-box"></i></button>
