(Client) Validación formulario recuperar contraseña

--- a/Cliente-Angular/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid forgotPassword py-4 px-5">
+<form [formGroup]="recoveryForm" class="container-fluid forgotPassword py-4 px-5">
     <div class="row">
         <h2 class="text-center mb-3">¿Olvidó la contraseña?</h2>      
     </div>
@@ -13,12 +13,20 @@
             <label for="email">Email:</label>
         </div>
         <div class="col-9">
-            <input class="input" type="text" name="email" placeholder="Email">
+            <input formControlName="email" class="input" type="text" placeholder="Email">
+        </div>
+        <div class="errorForm" *ngIf="submitted && myForm['email'].errors">
+            <div *ngIf="myForm['email'].errors['required']">
+                *Debes escribir un email
+            </div>
+            <div *ngIf="myForm['email'].errors['pattern']">
+                *Escriba un email correcto
+            </div>
         </div>
     </div>
     <div class="row my-3">
         <div class="col d-flex justify-content-center">
-            <button class="btn bgSecundario">Recuperar cuenta <i class="bi bi-person-check-fill"></i></button>
+            <button (click)="recovery()" class="btn bgSecundario">Recuperar cuenta <i class="bi bi-person-check-fill"></i></button>
         </div>
     </div>
     <hr>
@@ -27,4 +35,4 @@
             <a routerLink="/auth/register">¿No tienes cuenta? ¡Regístrate!</a>
         </div>
     </div>
-</div>
+</form>
