(Client) Funcionamiento completo de recuperación de contraseña

--- a/Cliente-Angular/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.html
@@ -1,11 +1,11 @@
-<form [formGroup]="recoveryForm" class="container-fluid forgotPassword py-4 px-5">
+<form *ngIf="!codeMode && !recoveryMode" [formGroup]="recoveryForm" class="container-fluid forgotPassword py-4 px-5">
     <div class="row">
         <h2 class="text-center mb-3">¿Olvidó la contraseña?</h2>      
     </div>
     <hr>
     <div class="row mt-4">
         <div class="col">
-            <p>Escriba su correo electrónico para mandarle una contraseña temporal con la que poder iniciar sesión temporalmente.</p>
+            <p class="text-center">Escriba su correo electrónico para mandarle un código de verificación y establecer así una nueva contraseña.</p>
         </div>
     </div>
     <div class="row my-4">
@@ -13,7 +13,7 @@
             <label for="email">Email:</label>
         </div>
         <div class="col-9">
-            <input formControlName="email" class="input" type="text" placeholder="Email">
+            <input #mail formControlName="email" class="input" type="text" placeholder="Email">
         </div>
         <div class="errorForm" *ngIf="submitted && myForm['email'].errors">
             <div *ngIf="myForm['email'].errors['required']">
@@ -23,16 +23,117 @@
                 *Escriba un email correcto
             </div>
         </div>
+        <div class="errorForm" *ngIf="submitted && !existsMail && mail.value">
+            *Parece que no existe ningún usuario con ese mail
+        </div>
     </div>
     <div class="row my-3">
         <div class="col d-flex justify-content-center">
-            <button (click)="recovery()" class="btn bgSecundario">Recuperar cuenta <i class="bi bi-person-check-fill"></i></button>
+            <button (click)="passRecoveryMail()" class="btn bgSecundario" [disabled]="sended ? true : false">Recuperar cuenta <i class="bi bi-person-check-fill"></i></button>
+        </div>
+    </div>
+    <ng-container class="row" *ngIf="sended">
+        <p class="text-center info">Le hemos mandado un código de recuperación. Compruebe la bandeja de entrada de tu correo.</p>
+        <a (click)="codeModeTrue()" *ngIf="recoveryKey"><p class="text-center blue">Introducir código</p></a>
+    </ng-container>
+    <hr>
+    <div class="row">
+        <div class="col d-flex justify-content-center mt-2">
+            <a routerLink="/auth/register">¿No tienes cuenta? ¡Regístrate!</a>
+        </div>
+    </div>
+</form>
+
+<form *ngIf="codeMode && !recoveryMode" [formGroup]="codeForm" class="container-fluid forgotPassword py-4 px-5">
+    <div class="row">
+        <h2 class="text-center mb-3">¿Olvidó la contraseña?</h2>      
+    </div>
+    <hr>
+    <div class="row mt-4">
+        <div class="col">
+            <p class="text-center">Escriba el código recibido.</p>
+        </div>
+    </div>
+    <div class="row mb-4 mt-2">
+        <div class="col-3">
+            <label for="key">Clave:</label>
+        </div>
+        <div class="col-9">
+            <input formControlName="key" class="input" type="text" placeholder="0000000000">
+        </div>
+        <div class="errorForm" *ngIf="submitted2 && myForm2['key'].errors">
+            <div *ngIf="myForm2['key'].errors['required']">
+                *Debes escribir un código de verificación
+            </div>
+            <div *ngIf="myForm2['key'].errors['minlength']">
+                *Escriba un código correcto (10 dígitos)
+            </div>
+            <div *ngIf="myForm2['key'].errors['maxlength']">
+                *Escriba un código correcto (10 dígitos)
+            </div>
+        </div>
+        <div class="errorForm" *ngIf="submitted && !correctCode">
+            *Código de verificación incorrecto
+        </div>
+    </div>
+    <div class="row my-3">
+        <div class="col d-flex justify-content-center">
+            <button (click)="checkKey()" class="btn bgSecundario">Verificar <i class="bi bi-check-circle"></i></button>
         </div>
     </div>
     <hr>
     <div class="row">
         <div class="col d-flex justify-content-center mt-2">
-            <a routerLink="/auth/register">¿No tienes cuenta? ¡Regístrate!</a>
+            <a (click)="codeModeFalse()" class="blue">¿No has recibido código?</a>
+        </div>
+    </div>
+</form>
+
+<form *ngIf="recoveryMode" [formGroup]="recoveryPassForm" class="container-fluid forgotPassword py-4 px-5">
+    <div class="row">
+        <h2 class="text-center mb-3">Actualizar contraseña</h2>      
+    </div>
+    <hr>
+    <div class="row mt-4">
+        <div class="col">
+            <p class="text-center">Escriba una nueva contraseña para su cuenta.</p>
+        </div>
+    </div>
+    <div class="row mb-4 mt-2">
+        <div class="col-3">
+            <label for="key">Contraseña:</label>
+        </div>
+        <div class="col-9">
+            <input formControlName="pass" class="input" [type]="showPass ? 'text' : 'password'">
+            <i (click)="showPass = !showPass" [class]="  showPass ? 'bi bi-eye-slash-fill icon' : 'bi bi-eye-fill icon'"></i>
+        </div>
+        <div class="errorForm" *ngIf="submitted3 && myForm3['pass'].errors">
+            <div *ngIf="myForm3['pass'].errors['required']">
+                *Debes escribir una contraseña
+            </div>
+        </div>
+    </div>
+    <div class="row mb-4 mt-2">
+        <div class="col-3">
+            <label for="key">Repetir contraseña:</label>
+        </div>
+        <div class="col-9">
+            <input formControlName="pass2" class="input" [type]="showPass ? 'text' : 'password'">
+            <i (click)="showPass = !showPass" [class]="  showPass ? 'bi bi-eye-slash-fill icon' : 'bi bi-eye-fill icon'"></i>
+        </div>
+        <div class="errorForm" *ngIf="submitted3 && myForm3['pass2'].errors">
+            <div *ngIf="myForm3['pass2'].errors['required']">
+                *Debes repetir la contraseña
+            </div>
+        </div>
+        <div class="errorForm" *ngIf="submitted3 && notEqualsPass">
+            <p class="text-center">*Las contraseñas no coinciden</p>
+        </div>
+    </div>
+
+    <div class="row my-3">
+        <div class="col d-flex justify-content-center">
+            <button (click)="newPassword()" class="btn bgSecundario">Actualizar contraseña <i class="bi bi-pencil-square"></i></button>
         </div>
     </div>
 </form>
