--- a/Cliente-Angular/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.scss
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.scss
@@ -10,6 +10,23 @@ a {
     text-decoration: none;
 }
 
+.blue {
+    color: rgb(7, 93, 150);
+    cursor: pointer;
+}
+
 .input {
     width: 100%;
+}
+
+.info {
+    color: rgba(99, 61, 16, 1);
+}
+
+.icon {
+    float: initial;
+    margin-left: -30px;
+    margin-top: 3px;
+    position: relative;
+    z-index: 2;
 }
