--- a/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="uploadedPassword" class="mt-4 container text-center alert alert-warning uploadPassDiv">
+    Se ha actualizado su contraseña, inicie sesión para continuar.
+</div>
 <form [formGroup]="loginForm" class="container-fluid login py-4 px-5">
     <div class="row">
         <h2 class="text-center mb-3">Iniciar sesión</h2>
