(Client) Abrir modal para intercambiar libro > product view component

--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -29,7 +29,8 @@
 
             <div *ngIf="authUser.id" class="row mt-4">
                 <div class="col d-flex justify-content-center">
-                    <button class="btn bgSecundario">Intercambiar <i class="bi bi-arrow-left-right"></i></button>
+                    <button (click)="chooseBook()" class="btn bgSecundario">Intercambiar <i
+                            class="bi bi-arrow-left-right"></i></button>
                 </div>
                 <div class="col d-flex justify-content-center">
                     <button routerLink="/purchase/1" class="btn bgSecundario">COMPRAR <i
@@ -99,6 +100,46 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="myModal" class="modal" [style]="showModal ? 'display: block;' : 'display: none;'">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="row mb-4">
+            <div class="col-11">
+                <h2 class="text-center mt-3 ms-5">Seleccione uno de sus libros para intercambiar</h2>
+            </div>
+            <div class="col-1">
+                <i class="bi bi-x close" (click)="showModal = false"></i>
+                <!-- <span (click)="showModal = false" class="close">&times;</span> -->
+            </div>
+        </div>
+
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-sm-6 col-md-4 mb-5" *ngFor="let book of bookList">
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <img src="data:image/jpg;base64,{{book.img}}" alt="" class="modalCover">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <h4 class="text-center mt-2">{{book.title}}</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <button class="btn bgSecundario">Seleccionar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-6 d-flex justify-content-center">
+                <button class="btn outlineSecondary" (click)="showModal = false">Cancelar <i class="bi bi-arrow-counterclockwise"></i></button>
             </div>
         </div>
     </div>
